<resources>
    <string name="app_name">TvShowCalendar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="top_10">TOP 10</string>

    <string name="profile">PROFILE</string>
    <string name="activity">ACTIVITY</string>
    <string name="settings">SETTINGS</string>
    <string name="following">FOLLOWING</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="search">SEARCH</string>
    <string name="exit">EXIT</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Sign up</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>

    <string name="terms_and_privacy_policy">By signing up, you are agreeing with our terms of use and privacy policy.</string>
    <string name="register">Sign up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
