<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/guillotine_background"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            style="@style/Toolbar"
            app:contentInsetStart="0dp">

            <ImageView
                android:id="@+id/guillotine_hamburger"
                style="@style/ImageView.Hamburger"
                android:src="@drawable/menu"
                tools:ignore="ContentDescription" />

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="550dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/log_in_group"
                style="@style/LinearLayout.GuillotineItem"
                android:layout_marginTop="@dimen/guillotine_medium_margin">

                <ImageView
                    style="@style/ImageView.GuillotineItem"
                    android:src="@drawable/user"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/login"
                    style="@style/TextView.GuillotineItem"
                    android:text="Sign in(temporary)"
                    android:clickable="true"
                    android:onClick="ClickedSignIn"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_group"
                style="@style/LinearLayout.GuillotineItem"
                android:layout_marginTop="@dimen/guillotine_medium_margin">

                <ImageView
                    style="@style/ImageView.GuillotineItem"
                    android:src="@drawable/user"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_user"
                    style="@style/TextView.GuillotineItem"
                    android:text="@string/profile" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:id="@+id/searching_group"
                style="@style/LinearLayout.GuillotineItem">

                <ImageView
                    style="@style/ImageView.GuillotineItem"
                    android:src="@drawable/search"
                    tools:ignore="ContentDescription" />

                <TextView

                    style="@style/TextView.GuillotineItem"
                    android:text="@string/search" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_group"
                style="@style/LinearLayout.GuillotineItem">

                <ImageView
                    style="@style/ImageView.GuillotineItem"
                    android:src="@drawable/top_ten"
                    tools:ignore="ContentDescription" />

                <TextView

                    style="@style/TextView.GuillotineItem.Selected"
                    android:text="@string/top_10" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/guillotine_divider_height" />

            <LinearLayout
                android:id="@+id/settings_group"
                style="@style/LinearLayout.GuillotineItem">

                <ImageView
                    style="@style/ImageView.GuillotineItem"
                    android:src="@drawable/options"
                    tools:ignore="ContentDescription" />

                <TextView

                    style="@style/TextView.GuillotineItem"
                    android:text="@string/settings" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/exit_group"
                style="@style/LinearLayout.GuillotineItem"
                android:layout_marginBottom="15dp">

                <ImageView
                    style="@style/ImageView.GuillotineItem"
                    android:src="@drawable/exit"
                    tools:ignore="ContentDescription" />

                <TextView

                    style="@style/TextView.GuillotineItem"
                    android:text="@string/exit" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>

